--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,77 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-image: url("./assets/images/bg.svg"),
+    linear-gradient(110deg, #f93d66, #6d47d9);
+  margin: 40px;
+}
+
+/* hero section */
+.hero-bg .card-bg {
+  background: url("./assets/images/taco.jpg");
+  min-height: 430px;
+  background-size: cover;
+  background-position: bottom right;
+  object-fit: contain;
+}
+
+/* gallery section */
+.gallery h2 {
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  grid-gap: 20px;
+  align-items: center;
+}
+
+.gallery h2::before {
+  display: block;
+  content: "";
+  height: 10px;
+  background: linear-gradient(to left, #ffc600, transparent);
+}
+
+.gallery h2::after {
+  display: block;
+  content: "";
+  height: 10px;
+  background: linear-gradient(to right, #ffc600, transparent);
+}
+
+.gallery img {
+  width: 100%;
+}
+
+/* menu section */
+.menu-item:last-child {
+  margin-right: 0 !important;
+}
+
+.menu-item.active {
+  display: grid;
+  max-height: 500px;
+  transform: rotateX(0);
+  margin-top: 10px;
+}
+
+.mobile-menu {
+  display: none;
+}
+
+/* media queries */
+@media screen and (max-width: 992px) {
+  .menu-item {
+    display: none;
+  }
+  .mobile-menu {
+    display: block;
+  }
+  .featured > * {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
